ChangeLog for pommed
--------------------

version 1.2:
	- pommed: PowerBook5,5 has an ADB keyboard, not a USB keyboard.

version 1.1:
	- gpomme: added theme selection; use -t theme_name to select the
	theme to use.
	- gpomme: added the Tango theme provided by Daniel G. Siegel.
	- gpomme: added multiple head support, based on a patch by Eduardo
	Bellido Bellido.

version 1.0:
	- Renamed to pommed in anticipation of the PowerBook support
	- Added fnmode setting
	- Added DBus support: signals and get methods
	- Add -d option to pommed, displays debug messages (replaces -DDEBUG)

version 0.9:
	- Added preliminary audio support: increase and decrease PCM, mute and
	unmute both Headphone and Front
	- Allow disabling the initial backlight level setting

version 0.8:
	- wait for both light sensors to be under the threshold before
	lighting up the keyboard backlight; switch it off as soon as one
	of the sensors gets past the threshold.
	- added a configuration file
	- added optional Apple Remote control support

version 0.7:
	- allow MacBook users to switch off the LCD backlight entirely
	- fix model identifier string for the Core2 Duo MacBook