@@ -3,6 +3,8 @@ ChangeLog for pommed
 
 version 1.2:
 	- pommed: PowerBook5,5 has an ADB keyboard, not a USB keyboard.
+	- Added October 2003 iBook G4 support (PowerBook6,3), patch by
+	Arthur PETITPIERRE.
 
 version 1.1:
 	- gpomme: added theme selection; use -t theme_name to select the
